# Arcpack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/design/: arcpack-architecture.md  arcpack-buildkit-subprocess-design.md  arcpack-design-prompt.md
docs/plan/: README.md  appendix-file-mapping.md  phase-1-data-structures.md  phase-10-build-infra.md  phase-2-provider-framework.md  phase-3-cli.md  phase-4-buildkit.md  phase-5-providers.md  phase-6-integration-tests-node-deep.md  phase-7-lightweight-providers.md  phase-8-ruby-elixir.md  phase-9-php-dotnet.md  phase-b1-llb-primitives.md  phase-b2-llb-conversion.md  phase-b3-grpc-session.md  phase-b4-cli-integration.md
src/: error.rs  lib.rs  main.rs
src/app/: environment.rs  mod.rs
src/buildkit/: client.rs  convert.rs  daemon.rs  grpc_client.rs  image.rs  mod.rs  platform.rs  proto.rs
src/buildkit/build_llb/: build_env.rs  cache_store.rs  layers.rs  mod.rs  step_node.rs
src/buildkit/grpc/: channel.rs  mod.rs  progress.rs  solve.rs
src/buildkit/llb/: exec.rs  file.rs  merge.rs  mod.rs  operation.rs  source.rs  terminal.rs
src/cli/: build.rs  common.rs  frontend.rs  info.rs  mod.rs  plan.rs  prepare.rs  pretty_print.rs  schema.rs
src/config/: mod.rs
src/generate/: cache_context.rs  command_step_builder.rs  deploy_builder.rs  image_step_builder.rs  install_bin_builder.rs  log_collector.rs  metadata.rs  mise_step_builder.rs  mod.rs
src/graph/: mod.rs
src/mise/: install.rs  mod.rs
src/plan/: cache.rs  command.rs  dockerignore.rs  filter.rs  layer.rs  mod.rs  packages.rs  spread.rs  step.rs
src/provider/: mod.rs
src/provider/cpp/: mod.rs
src/provider/deno/: mod.rs
src/provider/dotnet/: mod.rs
src/provider/elixir/: mod.rs
src/provider/gleam/: mod.rs
src/provider/golang/: mod.rs
src/provider/java/: gradle.rs  maven.rs  mod.rs
src/provider/node/: detect.rs  frameworks.rs  mod.rs  package_json.rs  package_manager.rs  prune.rs  spa.rs  workspace.rs
src/provider/php/: extensions.rs  laravel.rs  mod.rs
src/provider/procfile/: mod.rs
src/provider/python/: django.rs  frameworks.rs  mod.rs  package_manager.rs
src/provider/ruby/: mod.rs
src/provider/rust_lang/: mod.rs
src/provider/shell/: mod.rs
src/provider/staticfile/: mod.rs
src/resolver/: mod.rs  version.rs
tests/: cli_tests.rs  equivalence_tests.rs  integration_grpc.rs  integration_llb.rs  integration_tests.rs  plan_parity_tests.rs  snapshot_tests.rs
tests/fixtures/cpp-cmake/: CMakeLists.txt
tests/fixtures/deno-basic/: main.ts
tests/fixtures/elixir-basic/: mix.exs
tests/fixtures/gleam-basic/: gleam.toml
tests/fixtures/go-basic/: go.mod
tests/fixtures/go-cmd-subdir/: go.mod
tests/integration/: docker_compose.rs  http_check.rs  mod.rs  test_config.rs
tests/snapshots/: snapshot_tests__cpp-cmake-plan.snap  snapshot_tests__deno-basic-plan.snap  snapshot_tests__dotnet-basic-plan.snap  snapshot_tests__dotnet-basic-plan.snap.new  snapshot_tests__elixir-basic-plan.snap  snapshot_tests__gleam-basic-plan.snap  snapshot_tests__gleam-basic-plan.snap.new  snapshot_tests__go-basic-plan.snap  snapshot_tests__go-basic-plan.snap.new  snapshot_tests__go-cmd-subdir-plan.snap  snapshot_tests__go-cmd-subdir-plan.snap.new  snapshot_tests__go-workspace-plan.snap  snapshot_tests__go-workspace-plan.snap.new  snapshot_tests__java-gradle-plan.snap  snapshot_tests__java-gradle-plan.snap.new  snapshot_tests__java-maven-plan.snap  snapshot_tests__java-maven-plan.snap.new  snapshot_tests__node-bun-plan.snap  snapshot_tests__node-bun-plan.snap.new  snapshot_tests__node-monorepo-plan.snap  snapshot_tests__node-monorepo-plan.snap.new  snapshot_tests__node-next-plan.snap  snapshot_tests__node-next-plan.snap.new  snapshot_tests__node-npm-plan.snap  snapshot_tests__node-npm-plan.snap.new  snapshot_tests__node-pnpm-plan.snap  snapshot_tests__node-pnpm-plan.snap.new  snapshot_tests__node-react-router-plan.snap  snapshot_tests__node-react-router-plan.snap.new  snapshot_tests__node-vite-spa-plan.snap  snapshot_tests__node-vite-spa-plan.snap.new  snapshot_tests__node-yarn-berry-plan.snap  snapshot_tests__node-yarn-berry-plan.snap.new  snapshot_tests__node-yarn-plan.snap  snapshot_tests__php-basic-plan.snap  snapshot_tests__php-laravel-plan.snap  snapshot_tests__python-django-plan.snap  snapshot_tests__python-django-plan.snap.new  snapshot_tests__python-pip-plan.snap  snapshot_tests__python-pip-plan.snap.new  (+16 more)
(+53 files in other folders)
