[package]
name = "arcpack"
version = "0.1.0"
edition = "2021"
description = "零配置应用构建器——自动检测项目类型，生成优化的 OCI 镜像"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 文件系统
globset = "0.4"
walkdir = "2"
regex = "1"
ignore = "0.4"

# Unix 进程管理
nix = { version = "0.29", features = ["signal", "process"] }

# 终端着色
owo-colors = { version = "4", features = ["supports-colors"] }

# 哈希
sha2 = "0.10"

# 工具
semver = "1"
schemars = "0.8"
shell-words = "1"

# Protobuf 序列化（Phase B LLB 原语）
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

# gRPC（Phase B-3 BuildKit 直连）
tonic = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", optional = true }
hyper-util = { version = "0.1", optional = true, features = ["tokio"] }
tower = { version = "0.5", optional = true }

[dev-dependencies]
mockall = "0.13"
insta = { version = "1", features = ["json"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[features]
default = []
# Phase B-1/B-2: LLB 原语 + protobuf 序列化（只需 prost，不拉入 gRPC 栈）
llb = ["dep:prost", "dep:tonic-build"]
# Phase B-3/B-4: gRPC 客户端 + Session（依赖 llb）
grpc = ["llb", "dep:tonic", "dep:prost-types", "dep:tokio-stream", "dep:hyper-util", "dep:tower"]
