[package]
name = "arcpack"
version = "0.1.0"
edition = "2021"
description = "零配置应用构建器——自动检测项目类型，生成优化的 OCI 镜像"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 文件系统
globset = "0.4"
walkdir = "2"
regex = "1"
ignore = "0.4"

# Unix 进程管理
nix = { version = "0.29", features = ["signal", "process"] }

# 终端着色
owo-colors = { version = "4", features = ["supports-colors"] }

# 哈希
sha2 = "0.10"

# 临时目录（frontend 模式用于同步构建上下文）
tempfile = "3"

# 工具
semver = "1"
schemars = "0.8"
shell-words = "1"

# BuildKit 客户端（Session、proto 类型、gRPC 通信）
buildkit-client = { git = "https://github.com/arcbox-labs/buildkit-client.git", rev = "3624b041" }

# Protobuf 序列化（LLB 原语 + gateway.proto 本地编译）
prost = "0.13"
prost-types = "0.13"

# gRPC（Channel 创建 + Solve/Progress 逻辑）
tonic = "0.12"
tokio-stream = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"

[dev-dependencies]
mockall = "0.13"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["blocking"] }
serial_test = "3"
json5 = "0.4"

[build-dependencies]
tonic-build = "0.12"
